examples/typechecking/repeated_traits.an
foo a =
    print a
    print a

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (foo: fn _ -> Unit) (a: _) =
//     (print: fn (ref _) {Print _} [Ptr Unit] -> Unit pure) (ref (a: _)) {(error)}
//     (print: fn (ref _) {Print _} [Ptr Unit] -> Unit pure) (ref (a: _)) {(error)}

// expected stderr:
// examples/typechecking/repeated_traits.an:2:5
// 1 | foo a =
//   |     // error: Ambiguous implicit of type Print _ required by print, type annotation required
// 2 |     print a
//   |     ^^^^^
// 3 |     print a
// 
// examples/typechecking/repeated_traits.an:3:5
// 2 |     print a
//   |     // error: Ambiguous implicit of type Print _ required by print, type annotation required
// 3 |     print a
//   |     ^^^^^
// 
// Found 2 errors and 0 warnings

